--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "name": "elysia_vercel",
   "version": "1.0.50",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "vercel:dev": "bun run build && vercel dev",
+    "start": "bun run ./dist/src/index.js",
+    "typecheck": "tsc --noEmit",
+    "build": "tsc && tsc-alias"
   },
   "dependencies": {
-    "elysia": "latest"
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
+    "elysia": "latest",
+    "http-status-codes": "^2.3.0",
+    "lodash": "^4.17.21",
+    "zod": "^3.23.8",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/bun": "^1.1.13",
+    "@types/lodash": "^4.17.13",
+    "bun-types": "^1.1.34",
+    "tsc-alias": "^1.8.10",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "vercel": "^37.14.0"
   },
   "module": "src/index.js"
 }
