--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,19 @@
     },
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "types": ["node"],
+    "types": ["bun-types"],
+    "lib": ["ESNext"],
+    "moduleDetection": "force",
+    "target": "ESNext",
+    "allowJs": true,
     "outDir": "./dist",
     "typeRoots": ["./node_modules/@types"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    "noUncheckedIndexedAccess": true,
     "strict": true,
     "skipLibCheck": true
   },
