--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/bun": "^1.1.13",
     "@types/lodash": "^4.17.13",
-    "bun-types": "^1.1.34",
+    "bun-types": "latest",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
