--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "vercel:dev": "bun run build && vercel dev",
     "start": "bun run ./dist/src/index.js",
     "typecheck": "tsc --noEmit",
-    "build": "bun scripts/transform-paths.ts"
+    "build": "tsc && tsc-alias"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
