--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "elysia_vercel",
-  "version": "1.0.50",
+  "name": "z",
+  "version": "v0.1.3",
+  "license": "MIT",
+  "private": true,
   "type": "module",
+  "module": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
-    "vercel:dev": "bun run build && vercel dev",
-    "start": "bun run ./dist/src/index.js",
-    "typecheck": "tsc --noEmit",
-    "build": "tsc && tsc-alias"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.7",
-    "dotenv-expand": "^11.0.7",
-    "elysia": "latest",
-    "http-status-codes": "^2.3.0",
-    "lodash": "^4.17.21",
-    "zod": "^3.24.2",
-    "zod-i18n-map": "^2.27.0"
+    "start": "bun run ./src/main.ts",
+    "dev": "bun run --hot ./src/main.ts",
+    "test": "bun --watch test",
+    "build": "bun-vercel ./src/main.ts"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.8",
-    "@types/lodash": "^4.17.16",
     "bun-types": "latest",
-    "tsc-alias": "^1.8.13",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "vercel": "^37.14.0"
+    "bun-vercel": "^1.0.0-alpha.5"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@elysiajs/html": "^1.1.1",
+    "@elysiajs/swagger": "^1.1.1",
+    "elysia": "^1.1.12",
+    "react": "^18.2.0"
   }
 }
