--- a/package.json
+++ b/package.json
@@ -1,27 +1,57 @@
 {
-  "name": "z",
-  "version": "v0.1.3",
-  "license": "MIT",
-  "private": true,
+  "$schema": "https://json.schemastore.org/package",
+  "name": "elysia-kickstart",
+  "module": "src/index.ts",
   "type": "module",
-  "module": "index.ts",
   "scripts": {
-    "start": "bun run ./src/main.ts",
-    "dev": "bun run --hot ./src/main.ts",
-    "test": "bun --watch test",
-    "build": "bun-vercel ./src/main.ts"
-  },
-  "devDependencies": {
-    "bun-types": "latest",
-    "bun-vercel": "^1.0.0-alpha.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "----BUILD": "",
+    "build": "tailwindcss -i ./src/styles/globals.css -o ./public/globals.css",
+    "build:vercel": "bun run build && bun scripts/transform-paths.ts",
+    "----RUN": "",
+    "dev": "concurrently \"bun --watch src/index.ts\" \"bun run build --watch\"",
+    "start": "bun run build && bun src/index.ts",
+    "----CHECK": "",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint": "eslint --ignore-path .gitignore .",
+    "lint:fix": "eslint --ignore-path .gitignore --fix . ",
+    "typecheck": "tsc --noEmit",
+    "----DATABASE": "",
+    "db:drop": "drizzle-kit drop",
+    "db:generate": "drizzle-kit generate:sqlite",
+    "db:push": "drizzle-kit push:sqlite",
+    "db:view": "drizzle-kit studio"
   },
   "dependencies": {
-    "@elysiajs/html": "^1.1.1",
-    "@elysiajs/swagger": "^1.1.1",
-    "elysia": "^1.1.12",
-    "react": "^18.2.0"
+    "@auth/core": "^0.14.0",
+    "@auth/drizzle-adapter": "^0.3.2",
+    "@elysiajs/html": "^0.6.5",
+    "@elysiajs/static": "^0.6.0",
+    "@elysiajs/swagger": "^0.6.2",
+    "@libsql/client": "^0.3.4",
+    "better-sqlite3": "^8.6.0",
+    "drizzle-orm": "^0.28.6",
+    "drizzle-typebox": "^0.1.1",
+    "elysia": "^0.6.23",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "bun-types": "latest",
+    "concurrently": "^8.2.1",
+    "drizzle-kit": "^0.19.13",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "ts-toolbelt": "^9.6.0",
+    "typed-html": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
