--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,14 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["macros"] }
 serde_json = { version = "1", features = ["raw_value"] }
-vercel_runtime = { version = "1.1.0" }
+vercel_runtime = { version = "1.1.4" }
+reqwest = { version = "0.12.15", features = ["json"] }
+serde = "1.0.219"
 
 [[bin]]
 name = "index"
 path = "api/index.rs"
+
+[[bin]]
+name = "current-song"
+path = "api/current-song.rs"
